--- a/.github/workflows/wrangler-deploy-action.yml
+++ b/.github/workflows/wrangler-deploy-action.yml
@@ -1,2 +1,2 @@
-- name: Deploy to Cloudflare Workers with Wrangler
-  uses: cloudflare/wrangler-action@1.2.0
+name: Deploy to Cloudflare Workers with Wrangler
+uses: cloudflare/wrangler-action@1.2.0
